methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:4: error: not found: value versLAvant
{if (versLAvant) { avance(nbpas)}
     ^MethodsArgs:8: error: not found: value north
{if (getDirection == north) {return true}
                     ^MethodsArgs:11: error: not found: type int
def nbspas():int = {7 - getY }
             ^