methods.args.MethodsArgs.scala.code

def move(nbpas:Int , avant:Boolean) = 
{if (versLAvant) { avance(nbpas)}
 else {recule(nbpas)}}

def versLAVANT () : Boolean = 
{if (getDirection == north) {return true}
 else {return false}}

def nbspas():int = {7 - getY }

         